# vulkan_practice

./: CMakeLists.txt  rebuild_shaders.sh
src/: CMakeLists.txt  main.c  vk_wrap.c  vk_wrap.h  xcb_wrap.c  xcb_wrap.h
